--- a/frontend/signUpPageStyle.css
+++ b/frontend/signUpPageStyle.css
@@ -74,3 +74,13 @@ border: none;
 border-radius: 20px;
 cursor: pointer;
 }
+
+.message {
+text-align: center;
+margin-top: 400px;
+color: white;
+background-color: rgba(0, 0, 0, 0.7);
+padding: 10px;
+border-radius: 5px;
+display: none;
+}
